--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,165 @@
     <string name="search">Search</string>
     <string name="spinner_title">Register your Institution</string>
     <string name="feedback">Feedback</string>
+    <string name="your_string_here">This is an <u>underline</u>.</string>
+
+    <string-array name="array_district">
+        <item>Kathmandu</item>
+        <item>Lalitpur</item>
+        <item>Bhaktapur</item>
+        <item>Kavre</item>
+        <item>Jhapa</item>
+        <item>Morang</item>
+        <item>Sunsari</item>
+        <item>Taplejung</item>
+        <item>Panchthar</item>
+        <item>Dhankuta</item>
+        <item>Sankhuwasabha</item>
+        <item>Bhojpur</item>
+        <item>Terhathum</item>
+        <item>Okhaldunga</item>
+        <item>Khotang</item>
+        <item>Solukhumbu</item>
+        <item>Udaypur</item>
+        <item>Saptari</item>
+        <item>Siraha</item>
+        <item>Dhanusa</item>
+        <item>Mahottari</item>
+        <item>Sarlahi</item>
+        <item>Sindhuli</item>
+        <item>Ramechhap</item>
+        <item>Dolkha</item>
+        <item>Sindhupalchauk</item>
+        <item>Nuwakot</item>
+        <item>Rasuwa</item>
+        <item>Dhading</item>
+        <item>Makwanpur</item>
+        <item>Rauthat</item>
+        <item>Bara</item>
+        <item>Parsa</item>
+        <item>Chitwan</item>
+        <item>Gorkha</item>
+        <item>Lamjung</item>
+        <item>Tanahun</item>
+        <item>Syangja</item>
+        <item>Kaski</item>
+        <item>Manang</item>
+        <item>Mustang</item>
+        <item>Parwat</item>
+        <item>Myagdi</item>
+        <item>Baglung</item>
+        <item>Gulmi</item>
+        <item>Palpa</item>
+        <item>Nawalparasi</item>
+        <item>Rupandehi</item>
+        <item>Arghakanchi</item>
+        <item>Kapilvastu</item>
+        <item>Pyuthan</item>
+        <item>Rolpa</item>
+        <item>Rukum</item>
+        <item>Sakyab</item>
+        <item>Dang</item>
+        <item>Bardiya</item>
+        <item>Surkhet</item>
+        <item>Dailekh</item>
+        <item>Banke</item>
+        <item>Jajarkot</item>
+        <item>Dolpa</item>
+        <item>Humla</item>
+        <item>Kalikot</item>
+        <item>Mugu</item>
+        <item>Jumla</item>
+        <item>Bajura</item>
+        <item>Bajhang</item>
+        <item>Achham</item>
+        <item>Doti</item>
+        <item>Kailali</item>
+        <item>Kanchanpur</item>
+        <item>Dadeldhura</item>
+        <item>Baitadi</item>
+        <item>Darchula</item>
+    </string-array>
+
+    <string-array name="array_country">
+        <item>Nepal</item>
+        <item>India</item>
+        <item>Pakistan</item>
+        <item>Bhutan</item>
+        <item>Bangladesh</item>
+        <item>Maldives</item>
+        <item>Srilanka</item>
+        <item>China</item>
+        <item>Hongkong</item>
+        <item>Afganistan</item>
+        <item>United States</item>
+    </string-array>
+
+    <string-array name="array_institution">
+        <item>Government</item>
+        <item>Public</item>
+        <item>Private</item>
+        <item>Funded</item>
+    </string-array>
+
+    <string-array name="array_college_level">
+        <item>Bachelors</item>
+        <item>Masters</item>
+    </string-array>
+
+    <string-array name="array_college_duration">
+        <item>1.5 yrs</item>
+        <item>2 yrs</item>
+        <item>3 yrs</item>
+        <item>3.5 yrs</item>
+        <item>4 yrs</item>
+        <item>4.5 yrs</item>
+        <item>5 yrs</item>
+
+    </string-array>
+
+    <string-array name="array_affiliation">
+        <item>Tribhuwan University</item>
+        <item>Kathmandu University</item>
+        <item>Pokhara University</item>
+        <item>Purbhanchal University</item>
+        <item>Mid-Western University</item>
+        <item>Far-western University</item>
+        <item>Nepal Sanskrit University</item>
+        <item>Lumbini Bouddha University</item>
+        <item>Nepal Agriculture and Forestry University</item>
+    </string-array>
+
+    <string-array name="array_school_level">
+        <item>Grade 1</item>
+        <item>Grade 2</item>
+        <item>Grade 3</item>
+        <item>Grade 4</item>
+        <item>Grade 5</item>
+        <item>Grade 6</item>
+        <item>Grade 7</item>
+        <item>Grade 8</item>
+        <item>Grade 9</item>
+        <item>Grade 10</item>
+        <item>Grade 11</item>
+        <item>Grade 12</item>
+    </string-array>
+
+    <string-array name="array_university_level">
+        <item>Bachelors</item>
+        <item>Masters</item>
+        <item>Ph.D</item>
+    </string-array>
+
+    <string-array name="Planets">
+        <item>English</item>
+        <item>Nepali</item>
+        <item>Math</item>
+        <item>Science</item>
+        <item>Computer Science</item>
+        <item>Account</item>
+        <item>Opt math</item>
+        <item>Physice</item>
+        <item>Chemistry</item>
+    </string-array>
+
 </resources>
